got user routes implemented besides post and delete
